# Physio_Ca

./: ..gitignore.swp  .env  .gitignore  CITATION.cff  Dockerfile  Dockerfile.jupyterhub  Dockerfile.server  Dockerfile.server_dev  First_steps_1.1 [nd2 files].ipynb  First_steps_1.ipynb  Load_npz_linescan_to_raster_Long_Timescale.ipynb  README.md  README.rst  Single_file_0.1.ipynb  Single_file_0.ipynb  Single_file_2.2 [sandra's exp].ipynb  Untitled.ipynb  converter2npz.ipynb  converter2npz_1.ipynb  cosmin_example.pkl  create_env.sh  debug.py  docker-compose.yml  install_in_env.sh  install_package.sh  npz2traces.ipynb  obtaining_panel_0.ipynb  peculiar_histograms_in_leica-Copy1.2[search_for_small_impulses in 052 of 'Experiment'].ipynb  peculiar_histograms_in_leica.2[search_for_small_impulses in 051 of 'Experiment'].ipynb  peculiar_histograms_in_leica1.1.ipynb  peculiar_histograms_in_leica1.2[old recording from 2015].ipynb  plotFirst_0.py  plotFirst_1.py  pyproject.toml  requirements.txt  requirements0.txt  requirements_new_dash.txt  requirements_old_dash.txt  setup.py  simplified_1.ipynb  (+2 more)
.ipynb_checkpoints/: First_steps_1-checkpoint.ipynb  First_steps_2.1 [lif files]-checkpoint.ipynb  Single_file_0-checkpoint.ipynb  Single_file_0.1-checkpoint.ipynb  Single_file_2.1 [sandra's exp]-checkpoint.ipynb  Single_file_2.2 [sandra's exp]-checkpoint.ipynb  Untitled-Copy2-checkpoint.ipynb  Untitled-checkpoint.ipynb  converter2npz-checkpoint.ipynb  obtaining_panel_0-checkpoint.ipynb  peculiar_histograms_in_leica-Copy1.2[search_for_small_impulses in 052 of 'Experiment']-checkpoint.ipynb  peculiar_histograms_in_leica.1-checkpoint.ipynb  peculiar_histograms_in_leica.1.0-checkpoint.ipynb  peculiar_histograms_in_leica.2[search_for_small_impulses in 052 of 'Experiment']-checkpoint.ipynb  peculiar_histograms_in_leica1.1-checkpoint.ipynb  plotFirst_0-checkpoint.py  read_data_1-checkpoint.ipynb  simplified_1-checkpoint.ipynb
app/: App_for_tiff_0.ipynb  DatabaseManager.py  ExpLorer.ipynb  ExpLorer_0.py  ExpLorer_1.ipynb  ExpLorer_1.py  ExpLorer_2.py  ExpLorer_3.py  ExpLorer_5.py  ExpLorer_6.py  ExpLorer_9.py  LineScanner.ipynb  autoroi_save_1.2.ipynb  autoroi_save_1.3 [ultrafast].ipynb  autoroi_save_2.0.ipynb  autoroi_save_2.1.ipynb  autoroi_save_3.0.ipynb  autoroi_save_3.1.ipynb  autoroi_save_4.1.ipynb  autoroi_save_5.0[no rebinning].ipynb  explore_roi_0.ipynb  explore_roi_1.ipynb  explore_roi_2.ipynb  explore_roi_3.ipynb  explorer.py  explorer_test.py  process_picker.py  refresh_db.py
caiman/: setup.py
caiman_notebooks_deprecated/: demo_motion_correction.ipynb
dash/: app_0.py
deprecated/: App_0.ipynb  App_3.1.ipynb  App_5.0.ipynb  Examiner.py  ExpLorer_1.ipynb  ExpLorer_4.py  ExpLorer_7.py  ExpLorer_8.py  First_steps_2.0 [nd2 files].ipynb  Recording.py  autoroi_save_1.3.ipynb  autoroi_save_5.2.ipynb  cell_recognition_1.1.ipynb  cell_recognition_2.4 gl6 [Exp45b_Series006-8; shortcut].ipynb  cell_recognition_2.4 gl8 [Exp38a_Series016; shortcut].ipynb  explore_roi_0.ipynb  install_in_env.sh  motion_correction_0.ipynb  motion_correction_2.1.ipynb  motion_correction_2.3 [comparison].ipynb  parsing_3.py  process_single_2.py  read_data_1.ipynb  series2rois_5.ipynb  (+2 more)
(+254 files in other folders)
