[tool.poetry]
name = "islets"
version = "0.7.5"
description = ""
readme = "README.rst"
repository = "https://github.com/Hannnsen/Physio_Ca_framework"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
authors = [
  "Srdjan Sarikas <srdjan.sarikas@meduniwien.ac.at>",
  "Johannes Pfabe <johannes.pfabe@meduniwien.ac.at>"
]
packages = [
  { include = "islets" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-javabridge = "^4"
python-bioformats = "^4"
plotly = "^5.9"
dash = "^2.6.1"
jupyter-dash = "^0.4"
jupyter-plotly-dash = "^0.4"
pandas = "~1.3.5"
scikit-learn = "^1.1"
scikit-image = "^0.19"
tqdm = "^4.64"
bidict = "^0.22"
xlrd = "^2.0"
scipy = "^1.9"
matplotlib = "^3.5"
statsmodels = "^0.13"
opencv-python = "^4.6"
numba = ">=0.55"
ffmpeg-python = "^0.2"
nd2reader = "^3.3"
mgzip = "^0.2"
orjson = "^3.7"
openpyxl = "^3.0.10"
llvmlite = "0.38.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
