[project]
name = 'islets'
dynamic = [
  'version',
  'readme'
]
description = 'Analysis framework for calcium imaging data of pancreatic tissue slices, isolated islets and cells.'
authors = [
  { name = 'Srdjan Sarikas' },
  { name = 'Johannes Pfabe', email = 'johannes.pfabe@meduniwien.ac.at' },
]
requires-python = '>=3.9'
dependencies = [
  "python-bioformats",
  "jupyter-dash",
  "matplotlib",
  "opencv-python",
  "pandas==1.3.5",
  "scikit-learn",
  "scikit-image",
  "tqdm",
  "bidict",
  "scipy",
  "statsmodels",
  "numba",
  "ffmpeg-python",
  "nd2reader",
  "mgzip",
  "orjson",
  "slack_sdk",
  "openpyxl",
  "h5py"
]

[project.urls]
homepage = 'https://ctn2.physiologie.meduniwien.ac.at'
repository = 'https://github.com/szarma/Physio_Ca'

[tool.setuptools]
packages = ["islets"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.md"}

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"